# netflix_critic

./: .gitignore  .gitmodules  Postgres.dockerfile  README.MD  Webserver.dockerfile  background.js  content.js  docker-compose.yml  manifest.json  package-lock.json  package.json  pyproject.toml  styles.css  utils.js
extension-core/: background.js  content.js  manifest.json
scripts/: db_setup.sh
scripts/throwaway/: brd_async.py  plot_ratings.py
scripts/throwaway/test_async/: test_run.py  viz.py
scripts/webserver/: app.py  models.py
webserver/: app.py  app_logger.py  common.py  models.py  netflix_critic_data
webserver/templates/: index.html
