[project]
name = "netflix-critic"
version = "0.1.0"
description = "A chrome extension to add Google users rating data to Netflix titles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.10",
    "aiolimiter>=1.2.0",
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "minify-html>=0.15.0",
    "pythonmonkey>=1.1.0",
    "sqlmodel>=0.0.22",
    "apify-client>=1.8.1",
    "psycopg[binary]>=3.2.4",
    "hypercorn[h3,uvloop]>=0.17.3",
    "aioquic>=0.9.25",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "pytest-playwright>=0.6.2",
    "sqlacodegen>=3.0.0rc5",
]
